Entity Framework Core - Configuração Avançada de Mapeamento e Relacionamentos

--- a/Monolito/Catalog.API/appsettings.json
+++ b/Monolito/Catalog.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\MSSQLSERVER01;Database=CatalogDb;Trusted_Connection=True;"
+    "DefaultConnection": "Server=localhost\\MSSQLSERVER01;Database=CatalogDb;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
