Adicionado fluent validation, e Commands

--- a/Monolito/Catalog.Application/Catalog.Application.csproj
+++ b/Monolito/Catalog.Application/Catalog.Application.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />
     <PackageReference Include="MediatR" Version="12.5.0" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
